Checking in heikkki@netscape.com's fix for bug 93218, making the XML content sink process HTTP headers. r=harishd@netscape.com, sr=darin@netscape.com, a=dbaron@fas.harvard.edu